# TierMaster

./: README.md  docker-compose.yml
.github/workflows/: build_test_action.yml  deploy.yml
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/api-client/: All tierlists.bru  Create tier list.bru  Get user's tierlists.bru  Login.bru  Search.bru  Signup.bru  Tierlist by id.bru  Tierlist.bru  bruno.json  get tierlist.bru  ping.bru
backend/api-client/auth/: Login.bru  Logout.bru  Signup.bru  me.bru
backend/api-client/environments/: tier-master.bru
backend/api-client/image/: Many Images.bru  folder.bru
backend/api-client/template/: Delete by id.bru  Search.bru  by id.bru  by user.bru  folder.bru  template by id.bru  template.bru
backend/api-client/tierlist/: All tierlists.bru  Create tier list.bru  Delete by id.bru  Get user's tierlists.bru  Tierlist by id.bru  Tierlist.bru  folder.bru  get tierlist.bru
backend/application/: Cargo.toml
backend/application/src/: app_state.rs  lib.rs
backend/application/src/services/: auth_redis_service.rs  auth_service.rs  image_service.rs  mod.rs  service_factory.rs  template_service.rs  tierlist_service.rs  user_service.rs  websocket_service.rs
backend/application/src/usecases/: mod.rs  resize_image_usecase.rs  upload_images_usecase.rs
backend/core/: Cargo.toml
backend/core/src/: main.rs
backend/data/: Cargo.toml
backend/data/src/: databases.rs  error.rs  lib.rs
backend/data/src/models/: card_model.rs  grade_model.rs  mod.rs  template_grade_model.rs  template_model.rs  tierlist_model.rs  user_model.rs
backend/data/src/repositories/: auth_repository.rs  image_repository.rs  mod.rs  redis_repository.rs  repository_factory.rs  template_repository.rs  tierlist_repository.rs  user_repository.rs
backend/domain/: Cargo.toml
backend/domain/src/: error.rs  lib.rs  mappers.rs
backend/domain/src/entities/: card_entity.rs  create_template_entity.rs  create_tierlist_entity.rs  create_user_entity.rs  credentials_entity.rs  file_entity.rs  grade_entity.rs  image_entity.rs  mod.rs  room_entity.rs  template_entity.rs  template_grade_entity.rs  tierlist_entity.rs  update_template_entity.rs  update_tierlist_entity.rs  user_entity.rs
backend/domain/src/helpers/: image_helper.rs  mod.rs
backend/domain/src/repositories/: auth_repository.rs  image_repository.rs  mod.rs  redis_repository.rs  repository_factory.rs  template_repository.rs  tierlist_repository.rs  user_repository.rs
backend/domain/src/types/: mod.rs  pagination.rs  sort_option.rs
backend/domain/src/utils/: cancellable_task.rs  mod.rs
backend/presentation/: Cargo.toml
backend/presentation/src/: error.rs  lib.rs  server.rs
backend/presentation/src/controllers/: auth_controller.rs  image_controller.rs  mod.rs  template_controller.rs  tierlist_controller.rs  websocket_controller.rs
backend/presentation/src/middlewares/: auth_middleware.rs  mod.rs  optional_auth_middleware.rs
backend/presentation/src/presenters/: card_presenter.rs  create_template_presenter.rs  create_tierlist_presenter.rs  credentials_presenter.rs  grade_presenter.rs  mod.rs  room_presenter.rs  search_query_presenter.rs  template_grade_presenter.rs  template_presenter.rs  tierlist_presenter.rs  update_template_presenter.rs  update_tierlist_presenter.rs  user_presenter.rs
backend/presentation/src/states/: auth_session_state.rs  mod.rs  optional_auth_session_state.rs
backend/presentation/src/types/: mod.rs  paginated_response.rs
backend/src/: lib.rs  main.rs
backend/src/application/: mod.rs  service_factory.rs
backend/src/application/services/: mod.rs  tierlist_service.rs
backend/src/application/usecases/: usecase.rs
backend/src/core/: app.rs  app_state.rs  mod.rs  server.rs
backend/src/core/db/: mod.rs  mongo_connection.rs
backend/src/data/: mod.rs  repository_factory.rs
backend/src/data/models/: mod.rs  model.rs  tierlist_model.rs
backend/src/data/repositories/: mod.rs  tierlist_repository.rs
backend/src/domain/: mod.rs
backend/src/domain/abstract_repositories/: tierlist_repository.rs
backend/src/domain/entities/: mod.rs  tierlist_entity.rs  tl_entity.rs
backend/src/domain/errors/: api_error.rs  mod.rs
backend/src/domain/services/: tierlist_service.rs
backend/src/presentation/: error.rs  mod.rs
backend/src/presentation/controllers/: controller.rs  mod.rs  tierlist_controller.rs  tl_controller.rs
backend/src/presentation/presenters/: create_tierlist_presenter.rs  mod.rs  presenter.rs  tierlist_presenter.rs  tl_presenter.rs
backend/src/presentation/utils/: api_error_utils.rs  mod.rs
database/: .env.example  README.md  docker-compose.yml
front/: README.md  index.html  package-lock.json  package.json  vite.config.ts
front/src/: App.vue  main.ts
front/src/assets/: main.css
front/src/domain/interfaces/: Room.ts  RoomTierlist.ts  TierList.ts  User.ts
front/src/infra/: messages.ts
front/src/infra/locales/en/: editTemplate.ts  footer.ts  home.ts  index.ts  login.ts  nav.ts  templates.ts  tierlist.ts
front/src/infra/locales/fr/: editTemplate.ts  footer.ts  home.ts  login.ts  nav.ts  templates.ts  tierlist.ts
front/src/layouts/: NavBarLayout.vue
front/src/presentation/components/: EditTemplate.vue  Footer.vue  ItemCard.vue  MyTemplates.vue  NavBar.vue  RoomUserAvatar.vue  TemplateCard.vue  TemplateCarousel.vue  TemplateCreation.vue  TierList.vue
front/src/presentation/components/__tests__/: ItemCard.spec.ts  TierList.spec.ts
front/src/presentation/components/base/: BaseInput.vue  Button.vue  ConfirmPopup.vue  ImagePreviewInput.vue  Toast.vue  (+1 more)
front/src/presentation/layouts/: NavBarLayout.vue
front/src/presentation/router/: index.ts
front/src/presentation/stores/: authStore.ts  tierListStore.ts  tierlistRoomStore.ts  utilsStore.ts
front/src/presentation/views/: HomeView.vue  LoginView.vue  MyTemplateView.vue  MyTierListsView.vue  NotFoundView.vue  PrivacyPolicyView.vue  ProfileView.vue  RegisterView.vue  TemplateCreationView.vue  TermsOfUseView.vue  TierListTemplatesView.vue
