[workspace]
resolver = "3"
members = [
    "domain",
    "application",
    "core",
    "data",
    "presentation"
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
async-trait = "0.1.88"
bytes = "1.10.1"
derive-new = "0.7.0"
futures = "0.3.31"
image = "0.25.6"
tracing = "0.1.41"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7.15"}
webp = "0.3.0"
chrono = { version = "0.4.41", features = ["serde"] }