[package]
name = "application"
version.workspace = true
edition.workspace = true

[dependencies]
domain = { path = "../domain" }

# Uncomment if needed
# serde = {workspace = true}
# tokio = {workspace = true}
# async-trait = {workspace = true}
derive-new = {workspace = true}
# futures = {workspace = true}