[package]
name = "application"
version.workspace = true
edition.workspace = true

[dependencies]
domain = { path = "../domain" }

# Uncomment if needed
# async-trait = {workspace = true}
bytes = {workspace = true}
derive-new = {workspace = true}
tracing = {workspace = true}
chrono = "0.4.40"
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.1"
hmac = "0.13.0-pre.5"
sha2 = "0.11.0-pre.5"
# futures = {workspace = true}
image = {workspace = true}
# serde = {workspace = true}
# tokio = {workspace = true}