[package]
name = "core"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tiermaster-backend"
path = "src/main.rs"

[dependencies]
data = {path = "../data"}
presentation = {path = "../presentation"}

# Uncomment if needed
# async-trait = {workspace = true}
# bytes = {workspace = true}
# derive-new = {workspace = true}
# futures = {workspace = true}
# image = {workspace = true}
# serde = {workspace = true}
tokio = {workspace = true}

dotenv = "0.15.0"