[package]
name = "data"
version.workspace = true
edition.workspace = true

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }

# Uncomment if needed
async-trait = {workspace = true}
# bytes = {workspace = true}
# derive-new = {workspace = true}
futures = {workspace = true}
# image = {workspace = true}
serde = {workspace = true}
# tokio = {workspace = true}

mongodb = "3.2.3"
redis = "0.30.0"
aws-config = "1.6.2"
aws-sdk-s3 = "1.83.0"
