[package]
name = "data"
version.workspace = true
edition.workspace = true

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }

# Uncomment if needed
async-trait = {workspace = true}
bytes = {workspace = true}
# derive-new = {workspace = true}
futures = {workspace = true}
# image = {workspace = true}
serde = {workspace = true}
# tokio = {workspace = true}
# webp = { workspace = true }
chrono = { workspace = true }

mongodb = "3.2.3"
bson = {version = "2.15.0", features = ["chrono-0_4"]}
redis = "0.31.0"
aws-config = "1.6.2"
aws-sdk-s3 = "1.83.0"
url = "2.5.4"
