[package]
name = "domain"
version.workspace = true
edition.workspace = true

[dependencies]
# Uncomment if needed
async-trait = {workspace = true}
bytes = {workspace = true}
derive-new = {workspace = true}
# futures = {workspace = true}
image = {workspace = true}
# serde = {workspace = true}
# tokio = {workspace = true}