[package]
name = "presentation"
version.workspace = true
edition.workspace = true

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }

# Uncomment if needed
async-trait = {workspace = true}
# bytes = {workspace = true}
# futures = {workspace = true}
# image = {workspace = true}
derive-new = {workspace = true}
serde = {workspace = true}
tokio = {workspace = true}
# webp = { workspace = true }

tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
axum = { version = "0.8.3", features = ["multipart"]}
axum-extra = { version = "0.10.1", features = ["typed-header", "erased-json"] }
socketioxide = {version = "0.17.2", features = ["state"] }
log = "0.4.27"
